--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="game_logo">game logo</string>
-    <string name="level">Рівень</string>
+    <string name="level">Рівень %1$s</string>
     <string name="_0_0">0/0</string>
     <string name="image_1">image 1</string>
     <string name="image_2">image 2</string>
+    <string name="check_connection">Check you internet connection</string>
 </resources>
