--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="game_logo">game logo</string>
-    <string name="level">Рівень %1$s</string>
+    <string name="level">Рівень %1$d</string>
     <string name="_0_0">0/0</string>
     <string name="image_1">image 1</string>
     <string name="image_2">image 2</string>
     <string name="check_connection">Check you internet connection</string>
-    <string name="load_message">Please wait while the level set loads...</string>
+    <string name="load_message">Please wait while the level set loads…</string>
+    <string name="_0_10">%1$d/10</string>
 </resources>
