--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="check_connection">Check you internet connection</string>
     <string name="load_message">Please wait while the level set loads…</string>
     <string name="_0_10">%1$d/10</string>
+    <string name="download_new_level">Download new level</string>
+    <string name="next_40_levels">40 levels</string>
+    <string name="next_20_levels">20 levels</string>
 </resources>
