added Video Reward Hints

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="admob_id">ca-app-pub-3940256099942544/5224354917</string>
     <string name="admob_app_id"></string>
     <string name="banner_ad_unit_id_1">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="interst_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
 </resources>
