--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="_0_0">%1$d/10</string>
     <string name="check_connection">Check you internet connection</string>
     <string name="load_message">Please wait while the level set loads…</string>
+    <string name="all_level_loaded">All levels are already loaded</string>
     <string name="_0_10">%1$d/10</string>
     <string name="download_new_level">Download new level</string>
     <string name="next_40_levels">40 levels</string>
